[package]
name = "conduct-tk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.1"
ariadne = "0.1.5"

[dependencies.postcard]
version = "1.0.2"
features = ["alloc"]

[dependencies.serde]
version = "1.0.147"
features = ["derive"]

[dependencies.ahash]
version = "0.8.0"
features = ["std", "serde"]
